--- a/src/platform-implementation-js/style/shared.css
+++ b/src/platform-implementation-js/style/shared.css
@@ -145,7 +145,7 @@
 }
 
 .IDMAP_app_sidebar_content_area {
-  padding: 12px 8px;
+  width: 216px;
 }
 
 .IDMAP_app_sidebar_content_panel {
